--- a/package.json
+++ b/package.json
@@ -7,21 +7,17 @@
   "author": "Michael Jackson",
   "main": "index.js",
   "module": "esm/history.js",
-  "unpkg": "umd/history.js",
   "files": [
     "DOMUtils.js",
     "ExecutionEnvironment.js",
     "LocationUtils.js",
     "PathUtils.js",
-    "cjs",
     "createBrowserHistory.js",
     "createHashHistory.js",
     "createMemoryHistory.js",
     "createTransitionManager.js",
     "es",
-    "esm",
-    "umd",
-    "warnAboutDeprecatedCJSRequire.js"
+    "esm"
   ],
   "sideEffects": false,
   "scripts": {
